--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Murilo Cardoso">
   <title>Apresentação Pessoal - Murilo Cardoso</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/accordion.css">
-  <link rel="stylesheet" href="/css/_colors.css">
-  <link rel="stylesheet" href="/css/_breakpoints.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/accordion.css">
+  <link rel="stylesheet" href="css/colors.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
