--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container-info-personal background-blue-primary">
 
       <header>
-        <img class="image-person" src="/images/foto-perfil.jpg" alt="Imagem do rosto da pessoa">
+        <img class="image-person" src="./images/foto-perfil.jpg" alt="Imagem do rosto da pessoa">
         <div class="name-midias">
           <h2 class="grey-primary">Murilo Cardoso Correia</h2>
           <a href="https://www.linkedin.com/in/murilo-cardoso-a705a417a" target="_blank"><i class="fa fa-linkedin-square" style="font-size:20px;color:white" ></i></a>
