--- a/esportes.html
+++ b/esportes.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Murilo Cardoso">
     <title>Apresentação Pessoal - Murilo Cardoso</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/accordion.css">
-    <link rel="stylesheet" href="/css/_colors.css">
-    <link rel="stylesheet" href="/css/_breakpoints.css">
-    <link rel="stylesheet" href="/css/esporte.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/accordion.css">
+    <link rel="stylesheet" href="./css/_colors.css">
+    <link rel="stylesheet" href="./css/_breakpoints.css">
+    <link rel="stylesheet" href="./css/esporte.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -22,7 +22,7 @@
         <div class="container-info-personal background-blue-primary">
 
             <header>
-                <img class="image-person" src="/images/foto-perfil.jpg" alt="Imagem do rosto da pessoa">
+                <img class="image-person" src="./images/foto-perfil.jpg" alt="Imagem do rosto da pessoa">
                 <div class="name-midias">
                     <h2 class="grey-primary">Murilo Cardoso Correia</h2>
                     <a href="https://www.linkedin.com/in/murilo-cardoso-a705a417a" target="_blank"><i
