--- a/esportes.html
+++ b/esportes.html
@@ -9,8 +9,7 @@
     <title>Apresentação Pessoal - Murilo Cardoso</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/accordion.css">
-    <link rel="stylesheet" href="./css/_colors.css">
-    <link rel="stylesheet" href="./css/_breakpoints.css">
+    <link rel="stylesheet" href="./css/colors.css">
     <link rel="stylesheet" href="./css/esporte.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
